# preservica-upload

./: .env.example  .gitignore  README.md  pyproject.toml  tui.py
